WachRij linkedlist ipv list