@@ -1,12 +1,11 @@
-import java.util.ArrayList;
-import java.util.List;
+import java.util.LinkedList;
 import java.util.NoSuchElementException;
 
 public class WachtRij {
 
-    public int size;
+    private int size;
 
-    public List<Bestelling> queue = new ArrayList<Bestelling>();
+    public LinkedList<Bestelling> queue = new LinkedList<Bestelling>();
 
     public WachtRij() {
         size = 0;
@@ -17,18 +16,18 @@ public class WachtRij {
     }
 
     public void enqueue(Bestelling bestelling) {
-        queue.add(bestelling);
+        queue.add(queue.size(), bestelling);
         size++;
     }
 
     public void dequeue() {
-        queue.remove(0);
+        queue.remove(queue.getFirst());
         size--;
     }
 
     public Bestelling peek() {
         try {
-            return queue.get(0);
+            return queue.getFirst();
         }catch (NoSuchElementException e){
             return null;
         }
